swapped description with trophies; fixed a couple minor display bugs; aligned left and right HUDs

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,11 @@
 */
 
 /* GLOBAL */
+:root {
+	--right-hud-height: calc(10vw - 100px);
+	--left-hud-height:  calc(9vw - 15px);
+}
+
 body {
 	min-height: 100vh;
 	color: white;
@@ -93,6 +98,7 @@ a {
 	text-align: center;
 	width: 100%;
 	min-width: 500px;
+	height: 400px;
 }
 .container_trophies .trophy {
 	display: inline-block;
@@ -131,6 +137,8 @@ a {
 .container-videos {
 	position: relative;
 	display: block;
+	margin-top: 13px;
+	margin-bottom: 5px;
 	white-space: nowrap;
 }
 
@@ -254,13 +262,6 @@ a {
 	margin-bottom: 10%;
 }
 
-.container-description .wide-picture {
-	position:relative;
-	margin-top: -10%;
-	margin-bottom: -15%;
-	z-index: -1;
-}
-
 .container-description .description-header {
 	display: block;
 	position: relative;
@@ -272,10 +273,17 @@ a {
 	             0px 0px 2px rgba(0, 0, 0, 1.0);
 }
 
+.container-description .wide-picture {
+	position:relative;
+	margin-top: -15%;
+	margin-bottom: -14%;
+	z-index: -1;
+}
+
 .container-description p {
 	display: block;
 	position: relative;
-	width: 60%;
+	width: 50%;
 	min-width: 400px;
 	margin: auto;
 	text-align: center;
@@ -309,30 +317,32 @@ a {
 	position: fixed;
 	z-index: 100;
 	cursor: pointer;
+	margin: 12px 8px;
+	padding: 8px 12px;
 }
 .menu-item .title {
 	font-weight: 700;
 	letter-spacing: 4px;
 	font-size: 26px;
 	line-height: 26px;
-	margin: 10px;
-	padding: 10px;
+	margin: 0px;
+	padding: 0px;
 }
 .menu-item:hover .title {
 	color: #fdfae7;
 }
 #media-button {
-	bottom: calc(7vw + 148px);
-	right: 22px;
+	bottom: calc( var(--right-hud-height) + 153px);
+	right: 17px;
 	font-family: sans-serif;
 }
 #rsi {
-	bottom: calc(7vw + 188px);
+	bottom: calc( var(--right-hud-height) + 195px);
 	right: 0px;
 	font-family: sans-serif;
 }
 #org-finder {
-	bottom: calc(9vw + 60px);
+	bottom: calc( var(--left-hud-height) + 63px );
 	left: 20px;
 	font-family: sans-serif;
 	-webkit-transform: rotate(8deg);
@@ -354,15 +364,15 @@ body .container-HUD {
 .container-HUD.right-HUD {
 	width: 1280px;
 	height: 720px;
-	right: -810px;
-	bottom: 7vw;
+	right: -820px;
+	bottom: var(--right-hud-height);
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
 }
 h1.right-HUD {
 	position: fixed;
 	color: rgba(226, 145, 11, 1.0);
-	bottom: calc(7vw + 90px);
+	bottom: calc( var(--right-hud-height) + 90px);
 	right: 70px;
 	font-weight: 500;
 	font-family: sans-serif;
@@ -378,7 +388,7 @@ h1.right-HUD {
 .container-HUD.left-HUD {
 	width: 1280px;
 	height: 720px;
-	bottom: 9vw;
+	bottom: var(--left-hud-height);
 	left: calc(60px + 2vw);
 	-webkit-transform: scale(1.2);
 	transform: scale(1.2);
